--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>GIT & GITHUB</title>
   </head>
   <body>
-    <h1>head</h1>
+    <h1>SEMAINDA TZ</h1>
   </body>
 </html>
