adding html table

--- a/index.html
+++ b/index.html
@@ -8,5 +8,24 @@
   <body>
     <h1>SEMAINDA TZ</h1>
     <p>welcome to semainda website</p>
+    <table
+     <tr>
+      <th>first name</th>
+      <th>last name</th>
+      <th>age</th>
+      <th>Education</th>
+      </tr>
+      <tr>
+        <td>saidi</td>
+        <td>nuru</td>
+        <td>25</td>
+        <td>DIR</td>
+      </tr>
+      <tr>
+        <td>saidi</td>
+        <td>nuru</td>
+        <td>25</td>
+        <td>DIR</td>
+    </table>
   </body>
 </html>
